...
          activeOpacity={0.8}
        >
          <Image
            source={require("../../expo-app/assets/images/google-logo.png")}
            style={styles.googleImage}
          />
          <Text style={styles.googleButtonText}>Sign in with Google</Text>
        </TouchableOpacity>

        <TouchableOpacity
          style={styles.guestButton}
          onPress={handleSignInAsGuest}
          activeOpacity={0.8}
        >
          <Text style={styles.buttonText}>Continue as Guest</Text>
        </TouchableOpacity>
      </View>
    </View>
  );
}

...
