...
      transparent={true}
      visible={visible}
      onRequestClose={onClose}
    >
      <View style={styles.centeredView}>
        <View style={styles.modalView}>
          <Text style={styles.modalText}>Next Class</Text>
          <Text style={styles.classText}>{nextClass.summary}</Text>
          <Text style={styles.timeText}>
            {new Date(nextClass.start.dateTime).toLocaleTimeString([], {
              hour: "2-digit",
              minute: "2-digit",
            })}
...
