appId: com.goldendoodle.expoapp
---
- assertVisible: "Sign in with Google"
- assertVisible: "Continue as Guest"
- tapOn: "Sign in with Google"
- tapOn: "Close tab"
- tapOn: "Continue as Guest"
