appId: com.goldendoodle.expoapp
---
- tapOn: "Continue as Guest"
- tapOn: ""
- tapOn: "📍 Campus Map"
- tapOn: ", Class"
- assertVisible: "Next Class"
- tapOn: "GET DIRECTIONS"
