appId: com.goldendoodle.expoapp
---
- tapOn: "Continue as Guest"
- tapOn: ""
- tapOn: "📍 Campus Map"
- tapOn: ""
- tapOn: ", , View Loyola Campus"
- tapOn: ""
- tapOn: ", Loyola"
