appId: com.goldendoodle.expoapp
---
- tapOn: "Continue as Guest"
- tapOn: ""
- tapOn: "📍 Campus Map"
- tapOn: ", SGW"
